Last push on 22 December

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,2 @@
 @import "tailwindcss";
-@plugin "daisyui"{
-    themes: light --default;
-};
-@plugin "daisyui/theme" {
-  name: "light";
-  default: true;
-  /* --color-primary: #CAEB66;
-  --color-secondary: #03373D; */
-}
-
-
-body {
-  font-family: "Urbanist", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-}
+@plugin "daisyui";
